# sweets

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  Dockerfile  Dockerfile.gpu  FUTURE_IDEAS.md  README.md  REVIVAL.md  environment.yml  pyproject.toml
.github/workflows/: test-build-push.yml
docs/: example_compare_sources.ipynb  example_nisar.ipynb  example_opera_cslc.ipynb  example_radar_coord_ifg.ipynb  example_s1_burst.ipynb  sweets-demo.ipynb
scripts/: demo_sweet.py
src/sweets/: __main__.py  _burst_db.py  _cli_ifg.py  _dolphin.py  _dolphin_yaml_compat.py  _geocode_slcs.py  _geometry.py  _log.py  _netrc.py  _orbit.py  _report.py  _tropo.py  _unzip.py  _water_mask.py  cli.py  core.py  dem.py  download.py  interferogram.py  plotting.py  similarity.py  utils.py
src/sweets/download/: __init__.py  _strategy.py  asf_full.py  burst_subset.py
src/sweets/web/: README.md  app.py
src/sweets/web/api/: jobs.py
src/sweets/web/frontend/: index.html  package.json  vite.config.js
src/sweets/web/frontend/src/: App.svelte
src/sweets/web/models/: job.py
src/sweets/web/services/: executor.py
tests/: test_cli.py  test_core.py  test_dolphin.py  test_download_search.py  test_plotting.py  test_show_versions.py  test_utils.py
tests/cassettes/test_download_search/: test_opera_cslc_search_resolves_burst_ids.yaml
