[build-system]
requires = ["setuptools>=64.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

# ----------------------------------------------------------------------------
# Installation
#
# Recommended: pixi (https://pixi.sh). The pixi config below is the canonical
# environment definition; it pins the conda-forge versions of compass, isce3,
# gdal etc. that cannot ship on PyPI, and points s1-reader at the maintained
# fork at scottstanie/s1-reader@develop-scott.
#
#     pixi install              # solve + create the default env
#     pixi run sweets --help    # run inside the env
#
# For users who prefer plain conda/mamba, an environment.yml synced from this
# pyproject is provided at the repo root.
# ----------------------------------------------------------------------------

[project]
name = "sweets"
description = "Workflows for generating surface displacement maps using InSAR"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "License = file : LICENSE",
  "Operating System :: OS Independent",
]

# The version is written into _version.py at install time by setuptools_scm.
dynamic = ["version"]

# These are the pip-installable runtime deps. Several heavy native deps
# (compass, isce3, gdal, libgdal-netcdf) are conda-only and live in
# [tool.pixi.dependencies] below.
dependencies = [
  "asf_search",
  "burst2safe",
  "dolphin",
  "h5py",
  "numpy",
  # opera-utils comes from scottstanie/opera-utils@develop-scott via the
  # pixi pypi-dependencies block (carries the tropo workflow); a permissive
  # version pin here is fine for non-pixi installs.
  "opera-utils",
  "pandas",
  "pydantic>=2.1",
  "pyproj",
  "python-dateutil",
  "rasterio",
  "requests",
  "rich",
  "rioxarray",
  "sardem",
  "sentineleof",
  "shapely",
  "tyro",
]

[project.optional-dependencies]
web = [
  "fastapi>=0.100",
  "uvicorn[standard]",
  "sqlmodel",
  "python-multipart",
  "websockets",
  "titiler.core",
]

[project.urls]
Homepage = "https://github.com/isce-framework/sweets"
"Bug Tracker" = "https://github.com/isce-framework/sweets/issues"

# Entry points for the command line interface
[project.scripts]
sweets = "sweets.cli:main"


# ----------------------------------------------------------------------------
# pixi: canonical environment definition
# ----------------------------------------------------------------------------

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
sweets = { path = ".", editable = true }
# Use the maintained forks. Upstream isce-framework/s1-reader has a numpy 2
# incompat (polyfit scalar regression, see sweets#132); upstream
# opera-adt/COMPASS still uses np.string_ / np.unicode_ which were removed
# in numpy 2. Both forks restore numpy-2 compatibility on develop-scott.
s1reader = { git = "https://github.com/scottstanie/s1-reader.git", branch = "develop-scott" }
compass = { git = "https://github.com/scottstanie/COMPASS.git", branch = "develop-scott" }
# scottstanie/opera-utils@develop-scott carries the high-level
# `create_tropo_corrections_for_stack` workflow + `search_tropo` CMR client
# that the sweets tropo step builds on, plus the OPERA CSLC download
# helpers used by the OperaCslcSearch source.
opera-utils = { git = "https://github.com/scottstanie/opera-utils.git", branch = "develop-scott" }

[tool.pixi.dependencies]
python = ">=3.11"
pip = ">=21.3"
# Heavy native / conda-only deps. (compass and opera-utils are intentionally
# NOT here — they come from scottstanie/<repo> via [tool.pixi.pypi-dependencies]
# above so we get the numpy 2 fixes and the new tropo workflow.)
isce3 = ">=0.24"
gdal = "*"
libgdal-netcdf = "*"
# Pure-python deps mirrored from [project.dependencies] so the env solves
# fully through conda when possible.
asf_search = "*"
burst2safe = "*"
dolphin = "*"
h5py = ">=3.6"
numpy = ">=1.25"
pandas = "*"
pydantic = ">=2.1"
pyproj = ">=3.2"
python-dateutil = "*"
rasterio = "*"
requests = ">=2.10"
rich = ">=12.0"
rioxarray = "*"
sardem = "*"
sentineleof = "*"
shapely = ">=2.0"
tyro = "*"

[tool.pixi.tasks]
test = "pytest"
install = { depends-on = ["pre-commit_install"] }
pre-commit_install = "pre-commit install"
# Regenerate environment.yml from the pixi solve so non-pixi users have a
# current conda env spec to fall back on.
export-env = "pixi project export conda-environment > environment.yml"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.3.5,<9"
pytest-cov = "*"
pytest-randomly = "*"
pytest-xdist = "*"
pre-commit = "*"
mypy = "*"

[tool.pixi.feature.plotting.dependencies]
cartopy = "*"
matplotlib = "*"
colorcet = "*"

[tool.pixi.feature.web.dependencies]
fastapi = ">=0.100"
uvicorn = "*"
sqlmodel = "*"
python-multipart = "*"
websockets = "*"
titiler-core = "*"

[tool.pixi.environments]
default = { features = ["test", "plotting"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
plotting = { features = ["plotting"], solve-group = "default" }
web = { features = ["web", "plotting"], solve-group = "default" }
minimal = { features = [], solve-group = "default" }

[tool.setuptools_scm]
# https://github.com/pypa/setuptools_scm#configuration-parameters
write_to = "src/sweets/_version.py"
# https://github.com/pypa/setuptools_scm#version-number-construction
version_scheme = "no-guess-dev" # Will not guess the next version


[tool.black]
target-version = ["py311", "py312", "py313"]
preview = true

[tool.isort]
profile = "black"
known_first_party = ["sweets"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
# The web UI is WIP and tabled; sqlmodel's `table=True` metaclass argument
# trips mypy without the sqlmodel plugin. Skip until web is revived.
exclude = "src/sweets/web/"

[tool.pydocstyle]
ignore = "D100,D102,D104,D105,D106,D107,D203,D204,D213,D413"

[tool.pytest.ini_options]
filterwarnings = [
  # "error",
]
